[gd_scene load_steps=2 format=3 uid="uid://rlrt7sl0d1xr"]

[ext_resource type="Script" path="res://Interfaces/interface_username_change.gd" id="1_wn5mw"]

[node name="UsernameChange" type="Node"]
script = ExtResource("1_wn5mw")

[node name="NameInterface" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameContainer" type="HBoxContainer" parent="NameInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -20.0
offset_right = 238.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmButton" type="Button" parent="NameInterface/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Change"

[node name="UserInput" type="TextEdit" parent="NameInterface/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New username"

[node name="CloseButton" type="Button" parent="NameInterface/NameContainer"]
layout_mode = 2
text = "  X  "
